# cookiecutter-greengrass-v2-component

./: .gitignore  LICENSE  README.md  cookiecutter.json
{{cookiecutter.project_name}}/: .coveragerc  .gitignore  Makefile  README.md  pyproject.toml
{{cookiecutter.project_name}}/artifacts/{{cookiecutter.component_name}}/{{cookiecutter.component_version}}/: {{cookiecutter.component_entry_file_name}}.py
{{cookiecutter.project_name}}/recipes/: {{cookiecutter.component_name}}-{{cookiecutter.component_version}}.json
